--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hRx-cM-0YU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hRx-cM-0YU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -844,7 +844,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="lB8-tF-TAN" kind="custom" identifier="accountsSegue" customClass="SWRevealViewControllerSegue" id="VmT-0n-5ob"/>
+                                    <segue destination="lB8-tF-TAN" kind="custom" customClass="SWRevealViewControllerSegue" id="AEx-uP-flY"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="settings" textLabel="KEp-JT-xAd" style="IBUITableViewCellStyleDefault" id="fj7-vA-2gR">
@@ -1025,7 +1025,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Facebook" textLabel="Bnc-6c-3uy" detailTextLabel="oPU-X6-fup" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="Kxp-LE-krh">
-                                <rect key="frame" x="0.0" y="22" width="320" height="100"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kxp-LE-krh" id="GsT-Bt-re8">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
@@ -1049,7 +1049,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Twitter" textLabel="cQI-Xx-rV8" detailTextLabel="VAL-EA-csj" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="sxd-J4-kfJ">
-                                <rect key="frame" x="0.0" y="122" width="320" height="100"/>
+                                <rect key="frame" x="0.0" y="186" width="320" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sxd-J4-kfJ" id="YuJ-0e-Ffx">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
@@ -1073,7 +1073,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Foursquare" textLabel="zik-YM-sys" detailTextLabel="qSp-bx-aFi" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="iSZ-MF-EJp">
-                                <rect key="frame" x="0.0" y="222" width="320" height="100"/>
+                                <rect key="frame" x="0.0" y="286" width="320" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iSZ-MF-EJp" id="n54-TZ-nwz">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
@@ -1102,11 +1102,16 @@
                             <outlet property="delegate" destination="lB8-tF-TAN" id="wh5-CJ-jmp"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Connect User Accounts" id="Axr-Xi-LDn"/>
+                    <navigationItem key="navigationItem" title="Connect User Accounts" id="Axr-Xi-LDn">
+                        <barButtonItem key="leftBarButtonItem" image="menu.png" id="qrv-Ul-E0B"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="sidebarButton" destination="qrv-Ul-E0B" id="URE-Mz-ue7"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sxH-p9-FIk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="845" y="-2515"/>
+            <point key="canvasLocation" x="1323" y="-2515"/>
         </scene>
         <!--About Kefi View - About Kefi-->
         <scene sceneID="hJk-95-k0V">
@@ -1229,6 +1234,24 @@ Gal and Paul.</string>
             </objects>
             <point key="canvasLocation" x="845" y="-1836"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="igx-Sr-Do6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bv2-0x-lel" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FXW-N9-rWn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lB8-tF-TAN" kind="relationship" relationship="rootViewController" id="0yC-Fe-h4B"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g9K-94-ebv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="845" y="-2515"/>
+        </scene>
     </scenes>
     <resources>
         <image name="FavUnfilled.png" width="100" height="100"/>
@@ -1251,5 +1274,6 @@ Gal and Paul.</string>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="qkL-qH-Kra"/>
+        <segue reference="0yC-Fe-h4B"/>
     </inferredMetricsTieBreakers>
 </document>
