--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -169,7 +169,7 @@
                     <navigationItem key="navigationItem" id="dvh-km-6fZ"/>
                     <connections>
                         <outlet property="allView" destination="kh9-bI-dsS" id="cni-Xq-gdd"/>
-                        <outlet property="distanceMi" destination="1b3-7j-1ZK" id="v5S-sn-3dh"/>
+                        <outlet property="distanceLabel" destination="1b3-7j-1ZK" id="123-Lz-g3I"/>
                         <outlet property="energyLevel1" destination="TgH-Ny-MAj" id="tPu-T3-ejk"/>
                         <outlet property="energyLevel2" destination="bEg-fF-ifs" id="8bV-6c-DcJ"/>
                         <outlet property="energyLevel3" destination="MzB-Ka-lD7" id="nbb-d8-zUk"/>
@@ -712,8 +712,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="cancelSearchButton" destination="P34-La-VSr" id="fBI-x6-sWm"/>
+                        <outlet property="menuButton" destination="oqg-Iq-bKW" id="Twk-IE-GeD"/>
                         <outlet property="segmentControl" destination="RTM-PN-RaB" id="gA8-h1-Wrg"/>
-                        <outlet property="sidebarButton" destination="oqg-Iq-bKW" id="kAH-E0-lEd"/>
                         <outlet property="spinner" destination="Sae-Bi-fEX" id="0lL-BD-cGM"/>
                         <outlet property="spotlightPageControl" destination="zT6-Ga-8hR" id="Cuf-um-1cr"/>
                         <outlet property="spotlightView" destination="XmF-57-y88" id="rXs-FR-A99"/>
